--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "node-cron": "^3.0.3"
+    "dotenv": "^16.4.7",
+    "node-cron": "^3.0.3",
+    "nodemailer": "^6.10.0"
   }
 }
